src/components/organisms/Header/styles.module.scss
.wrapper_rounded {
  border-bottom-left-radius: 11px;
  border-bottom-right-radius: 11px;
}

.wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: auto;
  background-color: #fff;
  padding: 20px;

  & > * {
    padding-bottom: 20px;
    
    &:last-child {
      padding-bottom: 0;
    }
  }

  & .default-content-wrapper {
    box-sizing: content-box;
    position: relative;
    display: flex;
    align-items: center;
    height: 32px;

    & .left-element,
    & .right-element {
      position: absolute;
      max-width: 32px;
      max-height: 32px;
    }

    & .left-element {
      // padding offset
      left: 0px;
    }

    & .right-element {
      // padding offset
      right: 0px;
    }

    & .title {
      font-size: 17px;
      font-weight: 500;
      line-height: 20px;
      text-align: center;
      color: #000000;
      margin: auto;
      // 64px - summary of max widths of right and left elements
      max-width: calc(100% - 64px);
    }
  }
}

